@@ -227,22 +227,6 @@ name|hbase
 operator|.
 name|client
 operator|.
-name|HConnectionManager
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hbase
-operator|.
-name|client
-operator|.
 name|HTable
 import|;
 end_import
@@ -505,6 +489,12 @@ decl_stmt|;
 specifier|private
 name|File
 name|clusterTestBuildDir
+init|=
+literal|null
+decl_stmt|;
+specifier|private
+name|HBaseAdmin
+name|hbaseAdmin
 init|=
 literal|null
 decl_stmt|;
@@ -2574,15 +2564,162 @@ name|META_TABLE_NAME
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**    * Get the HBase cluster    * @return hbase cluster    */
+comment|/**    * Get the HBase cluster.    *     * @return hbase cluster    */
 specifier|public
 name|MiniHBaseCluster
-name|getHbaseCluster
+name|getHBaseCluster
 parameter_list|()
 block|{
 return|return
 name|hbaseCluster
 return|;
+block|}
+comment|/**    * Returns a HBaseAdmin instance.    *    * @return The HBaseAdmin instance.    * @throws MasterNotRunningException    */
+specifier|public
+name|HBaseAdmin
+name|getHBaseAdmin
+parameter_list|()
+throws|throws
+name|MasterNotRunningException
+block|{
+if|if
+condition|(
+name|hbaseAdmin
+operator|==
+literal|null
+condition|)
+block|{
+name|hbaseAdmin
+operator|=
+operator|new
+name|HBaseAdmin
+argument_list|(
+name|getConfiguration
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|hbaseAdmin
+return|;
+block|}
+comment|/**    * Closes the named region.     *    * @param regionName  The region to close.    * @throws IOException    */
+specifier|public
+name|void
+name|closeRegion
+parameter_list|(
+name|String
+name|regionName
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|closeRegion
+argument_list|(
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|regionName
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Closes the named region.     *    * @param regionName  The region to close.    * @throws IOException    */
+specifier|public
+name|void
+name|closeRegion
+parameter_list|(
+name|byte
+index|[]
+name|regionName
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|HBaseAdmin
+name|admin
+init|=
+name|getHBaseAdmin
+argument_list|()
+decl_stmt|;
+name|admin
+operator|.
+name|closeRegion
+argument_list|(
+name|regionName
+argument_list|,
+operator|(
+name|Object
+index|[]
+operator|)
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Closes the region containing the given row.     *    * @param row  The row to find the containing region.    * @param table  The table to find the region.    * @throws IOException    */
+specifier|public
+name|void
+name|closeRegionByRow
+parameter_list|(
+name|String
+name|row
+parameter_list|,
+name|HTable
+name|table
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|closeRegionByRow
+argument_list|(
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|row
+argument_list|)
+argument_list|,
+name|table
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Closes the region containing the given row.     *    * @param row  The row to find the containing region.    * @param table  The table to find the region.    * @throws IOException    */
+specifier|public
+name|void
+name|closeRegionByRow
+parameter_list|(
+name|byte
+index|[]
+name|row
+parameter_list|,
+name|HTable
+name|table
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|HRegionLocation
+name|hrl
+init|=
+name|table
+operator|.
+name|getRegionLocation
+argument_list|(
+name|row
+argument_list|)
+decl_stmt|;
+name|closeRegion
+argument_list|(
+name|hrl
+operator|.
+name|getRegionInfo
+argument_list|()
+operator|.
+name|getRegionName
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
