@@ -222,6 +222,8 @@ Release 0.21.0 - Unreleased
                (Lars George and J-D via Stack)
    HBASE-2027  HConnectionManager.HBASE_INSTANCES leaks TableServers
                (Dave Latham via Stack)
+   HBASE-2013  Add useful helpers to HBaseTestingUtility.java (Lars George
+               via J-D)
 
   NEW FEATURES
    HBASE-1901  "General" partitioner for "hbase-48" bulk (behind the api, write
